# openapi.yaml
@@ -227,6 +227,37 @@ paths:
         403:
           description: Forbidden
           content: { }
+  /casegroups/collectionExercise/{collectionExerciseId}:
+    get:
+      tags:
+        - case-group-endpoint
+      summary: deleteCasesByCollectionExerciseId
+      operationId: deleteCasesByCollectionExerciseId
+      description: deletes all cases associated with collection exercise id
+      parameters:
+        - name: collectionExerciseId
+          in: path
+          description: the uuid of the collection exercise
+          required: true
+          schema:
+            type: string
+      responses:
+        200:
+          description: OK
+          content:
+            text/plain:
+              schema:
+                type: number
+                example: 10503
+        401:
+          description: Unauthorized
+          content: { }
+        403:
+          description: Forbidden
+          content: { }
+        404:
+          description: Not Found
+          content: { }
   /cases/casegroupid/{casegroupId}:
     get:
       tags:
